# vue-practice

./: .dockerignore  .gitignore  .pdm-python  README.md  blah copy.json  blah.json  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docker/: Dockerfile  dockerfile.backend  dockerfile.db
migration/: env.py
migration/versions/: 7c25cb934dfb_add_a_column.py  f82bce455ac9_initial_migration.py
src/: App.vue  env.d.ts  main.js  main.ts
src/api_folder/: App.vue  test.vue
src/components/: Construction.vue  Gate.vue  Kitchen.vue  Livingroom.vue  Nav.vue  Terrace.vue  todolist.vue
src/pages/: Gate.vue  Kitchen.vue  Livingroom.vue  todolist.vue
src/router/: index.ts
src/todo_api/: __init__.py  api.py  app.py  database.py  middleware.py  models.py  run.py
src/todo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/todo_frontend/: App.vue  data.js  data.ts
